--- a/main.css
+++ b/main.css
@@ -103,6 +103,30 @@ nav {
 }
 
 /********************
+*** BORDER BUTTON ***
+********************/
+.border-button {
+  background-color: #fff;
+    color: #101832;
+    cursor: pointer;
+    letter-spacing: 0.075em;
+    padding: 0.8em 1em;
+    text-transform: uppercase;
+    border: 3px #00bcdd solid;
+    border-image: linear-gradient(45deg, #000000 0%, #ff9800 100%);
+    border-image-slice: 1 1 1 1;
+    box-shadow: -0.5em 0.5em rgba(16, 24, 50, 0);
+}
+
+
+.border-button:hover {
+  text-decoration: none;
+  color: #000;
+  font-weight: 600;
+  border-image: linear-gradient(45deg, #ff9800 0%, #000000 100%);
+  border-image-slice: 1 1 1 1;
+}
+/********************
 *** PARALLAX PICS ***
 ********************/
 /* Helpers */
@@ -138,7 +162,7 @@ nav {
 }
 #parallax-world-of-ugg h3 {
   font-family: "Oswald", sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 0;
   font-weight: 400;
   letter-spacing: 8px;
@@ -148,7 +172,7 @@ nav {
 #parallax-world-of-ugg p {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 24px;
 }
 .first-character {
@@ -181,7 +205,7 @@ nav {
   text-align: center;
 }
 #parallax-world-of-ugg .title h1 {
-  font-size: 35px;
+  font-size: 40px;
   letter-spacing: 8px;
 }
 
