--- a/main.css
+++ b/main.css
@@ -165,7 +165,7 @@ nav {
 #parallax-world-of-ugg h3 {
   font-family: "Oswald", sans-serif;
   font-size: 16px;
-  line-height: 0;
+  line-height: 1.3;
   font-weight: 400;
   letter-spacing: 8px;
   text-transform: uppercase;
@@ -412,6 +412,22 @@ nav {
   left: 0;
   right: 0;
   bottom: -10px;
+}
+
+.profile-img {
+  width: 135px;
+  height: 135px;
+  margin: 0 auto;
+  padding: 5px;
+  border: 1px solid #ddd;
+  border-radius: 50%;
+}
+
+.profile-img img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 50%;
 }
 
 .carousel .item .img-box {
