--- a/main.css
+++ b/main.css
@@ -10,12 +10,13 @@ h1, h2, h3 {
   font-size: 2.5rem;
 }
 
+
 /*************
 *** NAVBAR ***
 *************/
-
 nav {
   font-weight: 400;
+  height: 90px;
   background: white;
 }
 
