--- a/main.css
+++ b/main.css
@@ -2,7 +2,9 @@ body {
   font-family: "Oswald", sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   text-transform: uppercase;
 }
 
@@ -10,6 +12,19 @@ h1, h2, h3 {
   font-size: 2.5rem;
 }
 
+.witch-img {
+  max-width: 120%;
+  max-height: 500px;
+  padding: 5vh 0;
+}
+
+@media screen and (max-width: 767px) {
+  .witch-img {
+    width: 90%;
+    max-width: 400px;
+    padding: 30px 0 0;
+  }
+}
 
 /*************
 *** NAVBAR ***
@@ -37,7 +52,6 @@ nav {
 #navbarToggle ul li {
   padding: 5px 0;
 }
-
 
 /*******************
 *** VIDEO HEADER ***
@@ -98,7 +112,6 @@ nav {
   z-index: 2;
 }
 
-
 /****************
 *** BIOGRAPHY ***
 ****************/
@@ -106,7 +119,6 @@ nav {
   background: url(bg1.png);
   background-size: cover;
 }
-
 
 /********************
 *** BORDER BUTTON ***
@@ -131,7 +143,6 @@ nav {
   border-image: linear-gradient(45deg, #ff9800 0%, #000000 100%);
   border-image-slice: 1 1 1 1;
 }
-
 
 /********************
 *** PARALLAX PICS ***
@@ -189,7 +200,7 @@ h3 {
 }
 
 .sc {
-  color: #c47c60!important;
+  color: #c47c60 !important;
 }
 .ny {
   color: #3d3c3a;
@@ -350,7 +361,7 @@ h3 {
 
   #navbarToggle {
     position: absolute;
-    border-bottom: 2px solid #dee2e6!important;
+    border-bottom: 2px solid #dee2e6 !important;
     text-align: center;
     top: 70px;
     left: 0;
