--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ h3 {
 .yellow {
   color: #3c7a16;
   font-weight: 600;
-  background: -webkit-linear-gradient(#aa00ff, #6a1b9a);
+  background: -webkit-linear-gradient(#65ce24, #3c7a16);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -59,9 +59,9 @@ h3 {
 *********************/
 .border-button {
   background-color: white;
-  color: rgb(90, 199, 112);
+  color: #3c7a16;
   border: 2px #00bcdd solid;
-  border-image: linear-gradient(45deg, #ffd250 0%, #feaa20 100%);
+  border-image: linear-gradient(45deg, #ffd250 0%, #ffd250 100%);
   border-image-slice: 1 1 1 1;
   cursor: pointer;
   letter-spacing: 0.075em;
@@ -69,17 +69,17 @@ h3 {
   font-weight: 600;
   text-transform: uppercase;
   animation: float 5s ease-in-out infinite;
-  box-shadow: 0 5px 10px 0px rgba(0,0,0,0.2);
+  box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
 .border-button:hover {
   text-decoration: none;
-  color: #ffd250;
+  animation-play-state: paused;
+  color: #e7bf44;
   border: 2px #00bcdd solid;
-  border-image: linear-gradient(45deg, #aa00ff 0%, #6a1b9a 100%);
+  border-image: linear-gradient(45deg, #65ce24 0%, #3c7a16 100%);
   border-image-slice: 1 1 1 1;
 }
-
 
 /*****************
 *** NAVIGATION ***
@@ -135,18 +135,18 @@ nav {
 }
 
 @keyframes float {
-	0% {
-    box-shadow: 0 5px 10px 0px rgba(0,0,0,0.2);
-		transform: translatey(0px);
-	}
-	50% {
-		box-shadow: 0 15px 15px 0px rgba(0,0,0,0.4);
-		transform: translatey(-8px);
-	}
-	100% {
-		box-shadow: 0 5px 10px 0px rgba(0,0,0,0.3);
-		transform: translatey(0px);
-	}
+  0% {
+    box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.2);
+    transform: translatey(0px);
+  }
+  50% {
+    box-shadow: 0 15px 15px 0px rgba(0, 0, 0, 0.4);
+    transform: translatey(-8px);
+  }
+  100% {
+    box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.3);
+    transform: translatey(0px);
+  }
 }
 
 /*******************
@@ -178,7 +178,6 @@ nav {
 .moon-block {
   width: 900px;
 }
-
 
 /* Media Queries */
 /**************************/
